<resources>
    <string name="app_name">Simon Says Server</string>
    <string name="clicks_label">Clicks:</string>
    <string name="player1_label">Player 1:</string>
    <string name="player2_label">Player 2:</string>
    <string name="result_text_view" translatable="false"></string>
    <string name="redButton_Text">R</string>
    <string name="blueButton_text">B</string>
    <string name="yellowButton_text">Y</string>
    <string name="cyanButton_text">C</string>
    <string name="greenButton_text">G</string>
    <string name="magentaButton_text">M</string>
    <string name="fail_label">You failed!</string>
    <string name="win_label">You Win!</string>
    <string name="menu_reset">Reset</string>
    <string name="menu_about">About</string>
    <string name="menu_settings">Settings</string>
    <string name="about">This application simulates a Simon Says Game.\n\nThe first player will
    enter a pattern of presses equivalent to the number shown in the clicks label. Afterwards,
    he will hand the device over to the second player, who will try to imitate the previous
    pattern. If the second player succeeds, both patterns will be displayed equally on the bottom
    of the screen (If visible on your device).\n\nIf the second player presses an incorrect key,
        both patterns will appear on the bottom of the
    screen up until the part of the pattern where the
        second player did not match the first.</string>

    <!-- Preferences -->
    <string name="clicks_summary">Determine the amount of clicks used
        to generate the simon says pattern.</string>
    <string name="clicks_default">5</string>
    <string-array name="clicks_options">
        <item>Four</item>
        <item>Five</item>
        <item>Six</item>
    </string-array>
    <string-array name="clicks_values">
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>
    <string name="title_activity_connection">ConnectionActivity</string>

</resources>
